test: List.of로 변경